--- a/public/css/color.css
+++ b/public/css/color.css
@@ -1,7 +1,7 @@
 /*	Color
 =====================================================================*/
 .color_default{
-	color: #ffb32f;
+	color: #1b1b1b; /* #3474df */
 }
 .color_primary{
 	color: #1e283c;
@@ -21,7 +21,7 @@
 /*	Background Color
 ===================================================================*/
 .bg_default{
-	background-color: #ffb32f;
+	background-color: #3474df;
 }
 .bg_primary{
 	background-color: #1e283c;
@@ -47,7 +47,7 @@
 /*	btn color
 ===================================================================*/
 .btn-default{
-	background-color: #ffb32f;
+	background-color: #3474df;
 	color: #fff;
 }
 .btn-default:hover,.btn-default.active{
@@ -59,7 +59,7 @@
     filter: brightness(115%);
 }
 .btn_info{
-	color: #ffb32f;
+	color: #3474df;
 }
 .btn_info:hover{
 	color: #1e283c;
@@ -77,14 +77,14 @@
 	color: #1e283c;
 }
 .navbar-nav .nav-item .nav-link:before{
-	background-color: #ffb32f;
+	background-color: #3474df;
 }
 .navbar-light .navbar-nav .nav-link{
 	color: #fff
 }
 .navbar-light .navbar-nav .nav-link.active,.nav-scroll .navbar-light .navbar-nav .nav-link.active,
 ul#menu li.active a,.contact_massage a{
-	color: #ffb32f;
+	color: #3474df;
 }
 .nav-scroll .navbar-light .navbar-nav .nav-link{
 	color: #1e283c
@@ -101,7 +101,7 @@ ul#menu li.active a,.contact_massage a{
 	color: #fff
 }
 .white_hover a i:hover{
-	color: #ffb32f;
+	color: #3474df;
 }
 /*	Default Color Class & ID
 ===================================================================*/
@@ -109,7 +109,7 @@ ul#menu li.active a,.contact_massage a{
 .navbar-light .navbar-nav .nav-link:hover,.socal_media_2 ul li a:hover,
 ul#menu li a:hover,.twite i,.twite a:hover,.category_sidebar ul li:hover,
 .white_link a:hover,.recent_post a:hover,.archives ul li a:hover{
-	color: #ffb32f;
+	color: #3474df;
 }
 /*	Primary Color Class & ID
 ===================================================================*/
@@ -137,7 +137,7 @@ ul#menu li a:hover,.twite i,.twite a:hover,.category_sidebar ul li:hover,
 .lds-spinner div,.socal_media ul li a,#pp-nav li .active span, .pp-slidesNav .active span,
 .carousel-indicators .active,.contact_icon,.widget_title:before,.progress-bar,.page-item.active .page-link,
 .page-link:hover,.tags ul li a:hover{
-	background-color: #ffb32f !important;
+	background-color: #3474df !important;
 }
 ::-webkit-scrollbar-thumb{
 	background-color: #232323;
@@ -167,7 +167,7 @@ ul#menu li a:hover,.twite i,.twite a:hover,.category_sidebar ul li:hover,
 /*	Border Color Default
 ===================================================================*/
 .overlay-box{
-	border-color: #ffb32f;
+	border-color: #3474df;
 }
 /*	Border Color Primary
 ===================================================================*/
@@ -202,7 +202,7 @@ ul#menu li a:hover,.twite i,.twite a:hover,.category_sidebar ul li:hover,
 	border-color: #e1e1e1;
 }
 .border{
-	border-color: #ffb32f !important;
+	border-color: #3474df !important;
 }
 .form-control:focus{
 	border-color: #1e283c;
