--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1919,7 +1919,7 @@ label.radios {
 }
 
 .color-box li.default {
-  background-color:#ffb32f;
+  background-color:#3474df;
 }
 .color-box li.color_2 {
   background-color:#90c923;
